syntax = "proto3";
package auth;

import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "github.com/umalmyha/customers/proto";

service AuthService {
  rpc Signup(SignupRequest) returns (NewUserResponse);
  rpc Login(LoginRequest) returns (SessionResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc Refresh(RefreshRequest) returns (SessionResponse);
}

message SignupRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string = {min_len: 4, max_len: 24}];
}

message LogoutRequest {
    string refresh_token = 1 [(validate.rules).string.min_bytes = 1];
}

message LoginRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string.min_bytes = 1];
  string fingerprint = 3 [(validate.rules).string.min_bytes = 1];
}

message RefreshRequest {
  string fingerprint = 1 [(validate.rules).string.min_bytes = 1];
  string refresh_token = 2 [(validate.rules).string.min_bytes = 1];
}

message NewUserResponse {
  string id = 1;
  string email = 2;
}

message SessionResponse {
  string token = 1;
  int64 expires_at = 2;
  string refresh_token = 3;
}